# masrouter

./: download_data.py  pyproject.toml  run.sub  unitest.py
Datasets/: daily_dialogue_dataset.py  lccc_dataset.py
Datasets/daily_dialogue/: select_daily_dialogue.py
Datasets/lccc/: select_lccc.py
Experiments/: run_gsm8k.py  run_math.py  run_virtualgf.py  verify_openai.py
MAR/Graph/: graph.py
MAR/LLM/: llm_profile.py  price.py
MAR/MasRouter/: mas_router.py
MAR/Prompts/: tasks_profile.py
MAR/Roles/EmotionalCare/: CalmVoice.json  EmpatheticPartner.json  GentleListener.json  SoothingHealer.json
MAR/Roles/PlayfulChat/: CheekyPrankster.json  FlirtyBanter.json  PlayfulTeaser.json  StorySpinner.json
MAR/Roles/ThoughtfulGuide/: EmpathyCounselor.json  PracticalPlanner.json  RationalAdvisor.json
unitest_codes/: run_unitest.sub  unitest.py
unitest_codes/Classifier/: DailyDialogueBigModel.py  DailyDialogueClassifier.py  LLM2VecClassifier.py  TaskClassifier.py
源码备份/: agent.py  gpt_chat.py  llm_profile.py  price.py  tasks_profile.py
