[project]
name = "masrouter"
version = "0.1.0"
description = "Routing LLMs for Multi-Agent Systems"
requires-python = "==3.11.3"

dependencies = [
    "loguru",
    "pyyaml",
    "torch",
    "class-registry",
    "setuptools",
    "aiohttp",
    "tenacity",
    "dotenv",
    "requests",
    "groq",
    "openai",
    "tiktoken",
    "sentence_transformers",
    "shortuuid",
    "astunparse",
    "langchain_community",
    "pandas",
    "python-docx",
    "markdown",
    "PyPDF2",
    "openpyxl",
    "bs4",
    "pylatexenc",
    "python-pptx",
    "pyarrow",
    "datasets",
    "llm2vec",
]
